Squash merge feature/default-envelope into main
